# thefractal.space

./: .gitignore  README.md  default.nix  pyproject.toml
thefractal.space/templates/: about.html  brouse.html  generate.html
thefractalbot_web/: app.py  helpers.py
thefractalbot_web/static/: style.css
thefractalbot_web/templates/: base.html  brouse.html  generate.html  index.html
thefractalbot_web/templates/layouts/: base.html  regular.html
thefractalbot_web/templates/macros/: macros.html
thefractalspace/: app.py  helpers.py  manage.py
thefractalspace/fractals/: admin.py  apps.py  models.py  urls.py  views.py
thefractalspace/static/: bubbles.js  style.css
thefractalspace/templates/: 404.html  about.html  brouse.html  generate.html  index.html
thefractalspace/templates/fractals/: about.html  brouse.html  fractal.html  generate.html  index.html
thefractalspace/templates/layouts/: base.html  regular.html
thefractalspace/templates/macros/: macros.html
thefractalspace/thefractalspace/: asgi.py  jinja2.py  settings.py  urls.py  wsgi.py
thefractalspace_old/: app.py  helpers.py
