[tool.poetry]
name = "thefractal.space"
version = "1.0.4"
description = ""
authors = ["ddorn <diego.dorn@free.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.0"
brocoli = { git = "https://gitlab.com/ddorn/brocoli", rev = "0.3.1"}
gunicorn = {extras = ["eventlet"], version = "^20.0.0"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
