[tool.poetry]
name = "thefractalspace"
version = "1.0.4"
description = ""
authors = ["ddorn <diego.dorn@free.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.0"
brocoli = { git = "https://gitlab.com/ddorn/brocoli", rev = "0.3.2"}
gunicorn = {extras = ["eventlet"], version = "^20.0.0"}
django = "^3.0.0"
django-extensions = "^2.2.9"
ptpython = "^3.0.2"
django-colorfield = "^0.3.0"


[tool.poetry.dev-dependencies]
ptpython = "^3.0.2"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
